--- a/less-way/less/app.less
+++ b/less-way/less/app.less
@@ -1,8 +1,6 @@
-h1 {
-  font-size: 14px;
-  font-weight: bold;
-}
-
-h1, span, p {
-  color: red;
-}
+//@import "buttons-v0";
+//@import "buttons-v1";
+//@import "buttons-v2";
+//@import "buttons-v3";
+//@import "buttons-v4";
+@import "buttons-v5";
