--- a/less-way/less/buttons-v0.less
+++ b/less-way/less/buttons-v0.less
@@ -14,7 +14,7 @@
   cursor: pointer;
 }
 
-/* default */
+// default
 .btn-default {
   color: #333;
   background-color: #fff;
@@ -27,7 +27,7 @@
   border-color: #adadad;
 }
 
-/* primary */
+// primary
 .btn-primary {
   color: #fff;
   background-color: #337ab7;
@@ -40,7 +40,7 @@
   border-color: #204d74;
 }
 
-/* success */
+// success
 .btn-success {
   color: #fff;
   background-color: #5cb85c;
@@ -53,7 +53,7 @@
   border-color: #398439;
 }
 
-/* info */
+// info
 .btn-info {
   color: #fff;
   background-color: #5bc0de;
@@ -66,7 +66,7 @@
   border-color: #269abc;
 }
 
-/* warning */
+// warning
 .btn-warning {
   color: #fff;
   background-color: #f0ad4e;
@@ -79,7 +79,7 @@
   border-color: #d58512;
 }
 
-/* danger */
+// danger
 .btn-danger {
   color: #fff;
   background-color: #d9534f;
