--- a/less-way/less/app.less
+++ b/less-way/less/app.less
@@ -3,4 +3,5 @@
 //@import "buttons-v2";
 //@import "buttons-v3";
 //@import "buttons-v4";
-@import "buttons-v5";
+//@import "buttons-v5";
+@import "buttons-v6";
