--- a/less-way/less/colors-v5.less
+++ b/less-way/less/colors-v5.less
@@ -15,25 +15,29 @@
 @darker-blue: darken(@blue-base, 20%);
 
 // green
-@light-green: #5cb85c;
-@green: #4cae4c;
-@dark-green: #449d44;
-@darker-green: #398439;
+@green-base: #4cae4c;
+@light-green: lighten(@green-base, 10%);
+@green: @green-base;
+@dark-green: darken(@green-base, 10%);
+@darker-green: darken(@green-base, 20%);
 
 // orange
-@light-orange: #f0ad4e;
-@orange: #eea236;
-@dark-orange: #ec971f;
-@darker-orange: #d58512;
+@orange-base: #eea236;
+@light-orange: lighten(@orange-base, 10%);
+@orange: @orange-base;
+@dark-orange: darken(@orange-base, 10%);
+@darker-orange: darken(@orange-base, 20%);
 
 // cyan
-@light-cyan: #5bc0de;
-@cyan: #46b8da;
-@dark-cyan: #31b0d5;
-@darker-cyan: #269abc;
+@cyan-base: #46b8da;
+@light-cyan: lighten(@cyan-base, 10%);
+@cyan: @cyan-base;
+@dark-cyan: darken(@cyan-base, 10%);
+@darker-cyan: darken(@cyan-base, 20%);
 
 // red
-@light-red: #d9534f;
-@red: #d43f3a;
-@dark-red: #c9302c;
-@darker-red: #ac2925;
+@red-base: #d43f3a;
+@light-red: lighten(@red-base, 10%);
+@red: @red-base;
+@dark-red: darken(@red-base, 10%);
+@darker-red: darken(@red-base, 20%);
